--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
+   
     <button class="w drum">w</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
@@ -19,6 +20,7 @@
     <button class="j drum">j</button>
     <button class="k drum">k</button>
     <button class="l drum">l</button>
+    <button class="p drum">p</button>
   </div>
 
 
