--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-   
-    <button class="w drum">w</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
     <button class="d drum">d</button>
+    <button class="f drum">f</button>
+    <button class="h drum">h</button>
     <button class="j drum">j</button>
     <button class="k drum">k</button>
     <button class="l drum">l</button>
-    <button class="p drum">p</button>
   </div>
-
-
-  <footer>
+<footer>
     Made with ❤️ in India.
   </footer>
   <script src="index.js"></script>
